[package]
name = "lac-staking"
version = "0.1.0"
description = "LAC Staking Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lac_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
